--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h4 class="modal-title" id="myModalLabel">Modal title</h4>
           </div>
           <div class="modal-body">
-            <form>
+            <form accept-charset="utf-8" onsubmit="return false;">
               <div class="form-group">
                 <label for="title">Title</label>
                 <input type="text" class="form-control" id="title" placeholder="Title">
@@ -86,8 +86,8 @@
                 <input type="text" class="form-control" id="publisher" placeholder="Publisher">
               </div>
               <div class="form-group">
-                <label for="author">Category</label>
-                <select class="form-control">
+                <label for="category">Category</label>
+                <select class="form-control" id="category">
                   <option>...</option>
                   <option value="books">Books</option>
                   <option value="comics">Comics</option>
@@ -110,7 +110,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" id="saveData" class="btn btn-primary">Save</button>
               </div>
             </form><!--/Form -->
           </div>
