add markup for special danger case

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
+        <!-- Brand and toggle get grouped -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -28,12 +28,6 @@
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-         <!--  <form class="navbar-form navbar-left">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-          </form> -->
          <!--  <ul class="nav navbar-nav navbar-right">
             <li><a href="#gallery">Top Destinations</a></li>
             <li class="dropdown">
@@ -70,7 +64,8 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-            <p class="bg-danger hidden">Please check your input!</p>
+            <p class="bg-danger normal-danger hidden">Please check your input!</p>
+            <p class="bg-danger special-danger hidden">No way! You do NOT want to add this item!</p>
           </div>
           <div class="modal-body">
             <form accept-charset="utf-8" onsubmit="return false;">
