--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title text-uppercase" id="myModalLabel">Add Media Item</h4>
+
             <p class="bg-danger normal-danger hidden">Please check your input!</p>
-            <p class="bg-danger special-danger hidden">No way! You do NOT want to add this item!</p>
+            <p class="bg-danger special-danger hidden"><span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>No way! You do NOT want to add this item!</p>
           </div>
           <div class="modal-body">
             <form accept-charset="utf-8" onsubmit="return false;">
@@ -119,6 +120,8 @@
               <div class="modal-footer">
                 <button type="button" class="btn btn-default btn-lg pull-left" id="reset">Reset</button>
                 <button type="submit" id="saveData" class="btn btn-primary btn-lg">Save</button>
+                <button type="button" id="fillTestData" class="btn btn-default btn-sm">Fill with valid test data</button>
+                <button type="button" id="fillBaloney" class="btn btn-default btn-sm">Fill with some Baloney</button>
               </div>
             </form><!--/Form -->
           </div>
